attempt to change the columns

--- a/about.html
+++ b/about.html
@@ -167,18 +167,42 @@
     <div class="container">
       <div class="row">
         <div class="col-12">
-          <h2>about</h2>
-          <p>Vision/ mission/ values</p>
-          </p>
+          <h2 class="about-font-size">about</h2>
+			<p class="subheadings-about-page"><strong>Vision</strong></p>
+			<p>In the world of theater where LGBTQ+ characters are often misrepresented, we believe in shining spotlight on authentic storytelling. Because everyone at center stage deserves to be out and proud.</p>
+			</div>
+         </div>
+		</div>
+	    <div class="full-width-container">
+	   <div class="row">
+        <div class="col-12 container color-block-about-page w-100">
+	      <p class="subheadings-about-page"><strong>Mission</strong></p>
+			<p>We provide a safe, inclusive space where users can: Read articles, Watch interviews with</p>
+		  <p>&nbsp;LGBTQ+ actors and creators, Engage in meaningful discussions about representation,</p>
+		  <p>&nbsp;storytelling and more. Whether you are passionate about Queer theatre or simply&nbsp;</p>
+			<p>eager to learn more, our community welcomes everyone who values diversity on stage.</p>
         </div>
-      </div>
+           </div>
+	  <div class="full-width-container">
+	   <div class="row">
+        <div class="col-12 color-block-about-page full-width-container">
+			<p class="subheadings-about-page"><strong class="subheadings-about-page">Values</strong></p>
+			<ul> 
+			<li>Inclusivity</li>
+		    <li>Authenticity</li>
+		    <li>Learning</li>
+			<li>Accessibility</li>
+			</ul>	
+        </div>
+	   </div>
+	  </div>
       <!--you can delete the huge logo at the bottom if you want. its there to keep the page able to scroll for the footer-->
       <div class="row">
         <div class="col-12">
           <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo justify-content-end">
         </div>
       </div>
-    </div>
+				 </div>
     <!--end container for about-->
   </main>
   <!--main for your content stops here-->
