--- a/about.html
+++ b/about.html
@@ -162,47 +162,59 @@
 <!--end of navigations-->
 
 <!--main for your content and text starts here-->
-  <main>
+  <main class="col-12">
     <!--container for about-->
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <h2 class="about-font-size">about</h2>
-			<p class="subheadings-about-page"><strong>Vision</strong></p>
-			<p>In the world of theater where LGBTQ+ characters are often misrepresented, we believe in shining spotlight on authentic storytelling. Because everyone at center stage deserves to be out and proud.</p>
-			</div>
-         </div>
-		</div>
-	    <div class="full-width-container">
-	   <div class="row">
-        <div class="col-12 container color-block-about-page w-100">
-	      <p class="subheadings-about-page"><strong>Mission</strong></p>
-			<p>We provide a safe, inclusive space where users can: Read articles, Watch interviews with</p>
-		  <p>&nbsp;LGBTQ+ actors and creators, Engage in meaningful discussions about representation,</p>
-		  <p>&nbsp;storytelling and more. Whether you are passionate about Queer theatre or simply&nbsp;</p>
-			<p>eager to learn more, our community welcomes everyone who values diversity on stage.</p>
-        </div>
-           </div>
-	  <div class="full-width-container">
-	   <div class="row">
-        <div class="col-12 color-block-about-page full-width-container">
-			<p class="subheadings-about-page"><strong class="subheadings-about-page">Values</strong></p>
-			<ul> 
-			<li>Inclusivity</li>
-		    <li>Authenticity</li>
-		    <li>Learning</li>
-			<li>Accessibility</li>
-			</ul>	
-        </div>
-	   </div>
-	  </div>
-      <!--you can delete the huge logo at the bottom if you want. its there to keep the page able to scroll for the footer-->
-      <div class="row">
-        <div class="col-12">
-          <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo justify-content-end">
+   <div class="container">
+  <div class="row">
+    <div class="col-12">
+      <h2 class="about-font-size">about</h2>
+      <div class="container">
+        <div class="row d-flex align-items-center">
+          <div class="col-7">
+            <p class="subheadings-about-page">Vision</p>
+            <p>In the world of theatre where LGBTQ+ characters are often misrepresented, we believe in shining spotlight on authentic storytelling. Because everyone at center stage deserves to be out and proud.</p>
+          </div>
+          <div class="col-5 d-flex justify-content-center">
+            <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo logo-about-page">
+          </div>
         </div>
       </div>
-				 </div>
+    </div>
+  </div>
+</div>
+	<div class="full-width-container">
+	<div class="container-fluid full-width-container">
+    <div class="full-width-section col-12">
+   <div class="row">
+      <!-- Mission Section -->
+      <div class="col-lg-4 col-md-12 text-center text-md-start padding-of-mission-about-page">
+         <p class="subheadings-about-page"><strong>Mission</strong></p>
+         <p>We provide a safe, inclusive space where users can:</p>
+		  <ul>
+		  <li> Read articles&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</li>
+         <li>Watch interviews with&nbsp; LGBTQ+ actors&nbsp; &nbsp; and creators&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>
+         <li>&nbsp;Engage in meaningful discussions about&nbsp; &nbsp; representation,&nbsp; storytelling and more&nbsp; &nbsp; &nbsp;</li>
+		  </ul>   
+         <p>Whether you are passionate about Queer&nbsp; &nbsp; &nbsp; &nbsp;theatre or simply&nbsp;eager to learn more, our&nbsp; &nbsp; &nbsp; community welcomes everyone who value&nbsp; &nbsp; &nbsp; &nbsp;diversity on stage.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
+<p>&nbsp;</p>
+      </div>
+	   
+      <!-- Values Section -->
+      <div class="col-lg-8 col-md-12 text-center text-md-start padding-of-values-about-page">
+         <p class="subheadings-about-page"><strong>Values</strong></p>
+         <ul>
+            <li>Inclusivity</li>
+            <li>Authenticity</li>
+            <li>Learning</li>
+            <li>Accessibility</li>
+         </ul>
+      </div>
+   </div>
+  </div>
+</div>
+  </div>
+      <!--you can delete the huge logo at the bottom if you want. its there to keep the page able to scroll for the footer-->
+   
     <!--end container for about-->
   </main>
   <!--main for your content stops here-->
@@ -222,7 +234,7 @@
       </div>
     </div>
   </footer>
-  <!--footer ends here-->
+
 
   <!--your script starts here-->
   <script>
