--- a/about.html
+++ b/about.html
@@ -149,13 +149,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="./images/pink_carousel.webp" class="d-block w-100" alt="pink advertisement">
+        <img src="./images/theatre_shows/red_musical.jpg" class="d-block w-100" alt="red musical advertisement">
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="./images/teal_carousel.png" class="d-block w-100" alt="teal advertisement">
+        <img src="./images/theatre_shows/musical_picture.jpg" class="d-block w-100" alt="musical advertisement">
       </div>
       <div class="carousel-item">
-        <img src="./images/orange_carousel.png" class="d-block w-100" alt="orange advertisement">
+        <img src="./images/theatre_shows/theatre_show.jpg" class="d-block w-100" alt="theatre drag show advertisement">
       </div>
     </div>
   </div>
