attempt to change colour block

--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart"
               viewBox="0 0 16 16">
               <path
-                d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
+                d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
             </svg>
           </a>
         </button>
@@ -162,7 +162,7 @@
 <!--end of navigations-->
 
 <!--main for your content and text starts here-->
-  <main class="col-12">
+  <main class="col-12 main-color main">
     <!--container for about-->
    <div class="container">
   <div class="row">
@@ -171,8 +171,8 @@
       <div class="container">
         <div class="row d-flex align-items-center">
           <div class="col-7">
-            <p class="subheadings-about-page">Vision</p>
-            <p>In the world of theatre where LGBTQ+ characters are often misrepresented, we believe in shining spotlight on authentic storytelling. Because everyone at center stage deserves to be out and proud.</p>
+            <h3 class="subheadings-about-page">Vision</h3>
+<p>In the world of theatre where LGBTQ+ characters are often misrepresented, we believe in shining spotlight on authentic storytelling. Because everyone at center stage deserves to be out and proud.</p>
           </div>
           <div class="col-5 d-flex justify-content-center">
             <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo logo-about-page">
@@ -187,27 +187,48 @@
     <div class="full-width-section col-12">
    <div class="row">
       <!-- Mission Section -->
-      <div class="col-lg-4 col-md-12 text-center text-md-start padding-of-mission-about-page">
-         <p class="subheadings-about-page"><strong>Mission</strong></p>
-         <p>We provide a safe, inclusive space where users can:</p>
+      <div class="col-lg-4 col-md-12 text-md-start">
+         <blockquote>
+           <blockquote>
+             <blockquote>
+               <blockquote>
+                 <blockquote>
+                   <blockquote>
+                     <blockquote>
+                       <blockquote>
+                         <blockquote>
+                           <blockquote>
+                             <blockquote>
+                               <h3 class="subheadings-about-page"><strong>Mission</strong></h3>
+                             </blockquote>
+                           </blockquote>
+                         </blockquote>
+                       </blockquote>
+                     </blockquote>
+                   </blockquote>
+                 </blockquote>
+               </blockquote>
+             </blockquote>
+           </blockquote>
+         </blockquote>
+<p>We provide a safe, inclusive space where users can:</p>
 		  <ul>
-		  <li> Read articles&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</li>
-         <li>Watch interviews with&nbsp; LGBTQ+ actors&nbsp; &nbsp; and creators&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</li>
-         <li>&nbsp;Engage in meaningful discussions about&nbsp; &nbsp; representation,&nbsp; storytelling and more&nbsp; &nbsp; &nbsp;</li>
+		  <li> Read articles</li>
+         <li>Watch interviews with LGBTQ+ actors and creators</li>
+         <li>Engage in meaningful discussions aboutrepresentation,storytelling and more</li>
 		  </ul>   
-         <p>Whether you are passionate about Queer&nbsp; &nbsp; &nbsp; &nbsp;theatre or simply&nbsp;eager to learn more, our&nbsp; &nbsp; &nbsp; community welcomes everyone who value&nbsp; &nbsp; &nbsp; &nbsp;diversity on stage.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
-<p>&nbsp;</p>
+         <p>Whether you are passionate about Queer;theatre or simplyeager to learn more, ourcommunity welcomes everyone who values diversity on stage.</p>
       </div>
 	   
       <!-- Values Section -->
-      <div class="col-lg-8 col-md-12 text-center text-md-start padding-of-values-about-page">
-         <p class="subheadings-about-page"><strong>Values</strong></p>
-         <ul>
-            <li>Inclusivity</li>
+      <div class="col-lg-8 col-md-12">
+         <h3 class="subheadings-about-page"><strong>Values</strong></h3>
+<ul>
+  <li>Inclusivity</li>
             <li>Authenticity</li>
             <li>Learning</li>
             <li>Accessibility</li>
-         </ul>
+       </ul>
       </div>
    </div>
   </div>
