--- a/blog.html
+++ b/blog.html
@@ -162,25 +162,71 @@
 <!--end of navigations-->
 
 <!--main for your content and text starts here-->
+	
   <main>
+	  
     <!--container for about-->
+	  
     <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <h2>blog</h2>
-          <p>a couple blog posts</p>
-          </p>
+		
+      	<div class="row">
+        	<div class="col-12 col-xl-8">
+          		<img src="images/template1.jpg" class="img-fluid" alt="template">
+			</div>
+			<div class="col-12 col-xl-4">
+				<h1 class= "outfit-medium">Blog Title 1</h1>
+				<p class= "outfit-medium">summary of blog 1</p>
+        	</div>
+      	</div>
+		
+		<!-- Empty row -->
+		
+		<div class="row">
+        <div class="col">
+            <br> <!-- Adds space -->
         </div>
-      </div>
-    <!--you can delete the huge logo at the bottom if you want. its there to keep the page able to scroll for the footer-->
-      <div class="row">
-        <div class="col-12">
-          <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo justify-content-end">
-        </div>
-      </div>
+    	</div>
+		
+		<div class="row">
+			<div class="col-12 col-md-6 col-xl-4">
+			 	<img src="images/trial.jpg" class="img-fluid" alt="template">
+				<h1 class= "blogtitle">Sexuality isn't a personality! 10 reasons why representation matters.</h1>
+				<p class= "date">29.03.2025</p>
+			</div>
+			<div class="col-12 col-md-6 col-xl-4">
+				<img src="images/template2.jpg" class="img-fluid" alt="template">
+				<h1 class= "blogtitle">Blog Title 3</h1>
+				<p>date</p>
+			</div>
+			<div class="col-12 col-md-6 col-xl-4">
+				<img src="images/template2.jpg" class="img-fluid" alt="template">
+				<h1 class= "blogtitle">Blog Title 4</h1>
+				<p>date</p>
+			</div>
+	
+			<div class="col-12 col-md-6 col-xl-4">
+			 	<img src="images/template2.jpg" class="img-fluid" alt="template">
+				<h1 class= "blogtitle" >Blog Title 5</h1>
+				<p>date</p>
+			</div>
+			<div class="col-12 col-md-6 col-xl-4">
+				<img src="images/template2.jpg" class="img-fluid" alt="template">
+				<h1 class= "blogtitle">Blog Title 6</h1>
+				<p>date</p>
+			</div>
+			<div class="col-12 col-md-6 col-xl-4">
+				<img src="images/template2.jpg" class="img-fluid" alt="template">
+				<h1 class= "blogtitle">Blog Title 7</h1>
+				<p>date</p>
+			</div>
+		</div>
+		
     </div>
+	  
     <!--end container for about-->
+	  
   </main>
+	
   <!--main for your content stops here-->
 
   <!--footer navigation starts here-->
