--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart"
               viewBox="0 0 16 16">
               <path
-                d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15" />
+                d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143q.09.083.176.171a3 3 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15"/>
             </svg>
           </a>
         </button>
@@ -149,36 +149,93 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="./images/pink_carousel.webp" class="d-block w-100" alt="pink advertisement">
+        <img src="./images/theatre_shows/red_musical.jpg" class="d-block w-100" alt="red musical advertisement">
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="./images/teal_carousel.png" class="d-block w-100" alt="teal advertisement">
+        <img src="./images/theatre_shows/musical_picture.jpg" class="d-block w-100" alt="musical advertisement">
       </div>
       <div class="carousel-item">
-        <img src="./images/orange_carousel.png" class="d-block w-100" alt="orange advertisement">
+        <img src="./images/theatre_shows/theatre_show.jpg" class="d-block w-100" alt="theatre drag show advertisement">
       </div>
     </div>
   </div>
 <!--end of navigations-->
 
 <!--main for your content and text starts here-->
-  <main>
+  <main class="col-12 main-color main">
     <!--container for about-->
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <h2>about</h2>
-          <p>Vision/ mission/ values</p>
-          </p>
-        </div>
-      </div>
-      <!--you can delete the huge logo at the bottom if you want. its there to keep the page able to scroll for the footer-->
-      <div class="row">
-        <div class="col-12">
-          <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo justify-content-end">
+   <div class="container">
+  <div class="row">
+    <div class="col-12">
+      <h2 class="about-font-size">about</h2>
+      <div class="container">
+        <div class="row d-flex align-items-center">
+          <div class="col-7">
+            <h3 class="subheadings-about-page">Vision</h3>
+<p>In the world of theatre where LGBTQ+ characters are often misrepresented, we believe in shining spotlight on authentic storytelling. Because everyone at center stage deserves to be out and proud.</p>
+          </div>
+          <div class="col-5 d-flex justify-content-center">
+            <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo logo-about-page">
+          </div>
         </div>
       </div>
     </div>
+  </div>
+</div>
+	<div class="full-width-container">
+	<div class="container-fluid full-width-container">
+    <div class="full-width-section col-12">
+   <div class="row">
+      <!-- Mission Section -->
+      <div class="col-lg-4 col-md-12 text-md-start">
+         <blockquote>
+           <blockquote>
+             <blockquote>
+               <blockquote>
+                 <blockquote>
+                   <blockquote>
+                     <blockquote>
+                       <blockquote>
+                         <blockquote>
+                           <blockquote>
+                             <blockquote>
+                               <h3 class="subheadings-about-page"><strong>Mission</strong></h3>
+                             </blockquote>
+                           </blockquote>
+                         </blockquote>
+                       </blockquote>
+                     </blockquote>
+                   </blockquote>
+                 </blockquote>
+               </blockquote>
+             </blockquote>
+           </blockquote>
+         </blockquote>
+<p>We provide a safe, inclusive space where users can:</p>
+		  <ul>
+		  <li> Read articles</li>
+         <li>Watch interviews with LGBTQ+ actors and creators</li>
+         <li>Engage in meaningful discussions aboutrepresentation,storytelling and more</li>
+		  </ul>   
+         <p>Whether you are passionate about Queer;theatre or simplyeager to learn more, ourcommunity welcomes everyone who values diversity on stage.</p>
+      </div>
+	   
+      <!-- Values Section -->
+      <div class="col-lg-8 col-md-12">
+         <h3 class="subheadings-about-page"><strong>Values</strong></h3>
+<ul>
+  <li>Inclusivity</li>
+            <li>Authenticity</li>
+            <li>Learning</li>
+            <li>Accessibility</li>
+       </ul>
+      </div>
+   </div>
+  </div>
+</div>
+  </div>
+      <!--you can delete the huge logo at the bottom if you want. its there to keep the page able to scroll for the footer-->
+   
     <!--end container for about-->
   </main>
   <!--main for your content stops here-->
@@ -198,7 +255,7 @@
       </div>
     </div>
   </footer>
-  <!--footer ends here-->
+
 
   <!--your script starts here-->
   <script>
