--- a/blog.html
+++ b/blog.html
@@ -195,7 +195,7 @@
 			</div>
 			<div class="col-12 col-md-6 col-xl-4">
 				<img src="images/template2.jpg" class="img-fluid" alt="template">
-				<h1 class= "blogtitle">Blog Title 3</h1>
+				<h1 class= "blogtitle">something something</h1>
 				<p>date</p>
 			</div>
 			<div class="col-12 col-md-6 col-xl-4">
