adding of meet the team section

--- a/about.html
+++ b/about.html
@@ -159,92 +159,159 @@
       </div>
     </div>
   </div>
-<!--end of navigations-->
+<!--End of navigations-->
 
-<!--main for your content and text starts here-->
-  <main class="col-12 main-color main">
-    <!--container for about-->
-   <div class="container">
-  <div class="row">
-    <div class="col-12">
-      <h2 class="about-font-size">about</h2>
-      <div class="container">
-        <div class="row d-flex align-items-center">
-          <div class="col-7">
-            <h3 class="subheadings-about-page">Vision</h3>
-<p>In the world of theatre where LGBTQ+ characters are often misrepresented, we believe in shining spotlight on authentic storytelling. Because everyone at center stage deserves to be out and proud.</p>
+<!--Main for your content and text starts here-->
+  <main class="col-12 col-md-6 col-xl-12 main-about-page">
+
+    <!--Container for about-->
+     <div class="container">
+       <div class="row">
+          <div class="col-12 col-md-6 col-xl-4">
+            <h2 class="about-font-size">About</h2>
+	     </div>
+	   </div>
+    </div> 
+	  <!--End of container for about-->
+	  
+	 <!--Start of container for vision-->
+	  <div class="container">
+	    <div class="row d-flex align-items-center">
+	     <div class="container-vision-about-page">
+		  <div class="col-7 col-md-6 col-xl-4">
+		    <h3 class="vision-about-page">Vision</h3>
+			    <p>In the world of theatre where LGBTQ+ characters are often misrepresented, we believe in shining spotlight on authentic storytelling. Because everyone at center stage deserves to be out and proud.</p>
+			</div>
           </div>
-          <div class="col-5 d-flex justify-content-center">
-            <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo logo-about-page">
-          </div>
+		</div>
+	  </div>
+	  
+	  <!--End of container for Vision-->
+	  
+	  
+	  <!--Start of container for Logo-->
+	   <div class="col-5 col-md-6 col-xl-8 d-flex justify-content-center">
+		 <div class="d-flex justify-content-center">
+		   <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo logo-about-page"> 
         </div>
       </div>
-    </div>
-  </div>
-</div>
-	<div class="full-width-container">
-	<div class="container-fluid full-width-container">
-    <div class="full-width-section col-12">
-   <div class="row">
-      <!-- Mission Section -->
-      <div class="col-lg-4 col-md-12 text-md-start">
-         <blockquote>
-           <blockquote>
-             <blockquote>
-               <blockquote>
-                 <blockquote>
-                   <blockquote>
-                     <blockquote>
-                       <blockquote>
-                         <blockquote>
-                           <blockquote>
-                             <blockquote>
-                               <h3 class="subheadings-about-page"><strong>Mission</strong></h3>
-                             </blockquote>
-                           </blockquote>
-                         </blockquote>
-                       </blockquote>
-                     </blockquote>
-                   </blockquote>
-                 </blockquote>
-               </blockquote>
-             </blockquote>
-           </blockquote>
-         </blockquote>
-<p>We provide a safe, inclusive space where users can:</p>
-		  <ul>
-		  <li> Read articles</li>
-         <li>Watch interviews with LGBTQ+ actors and creators</li>
-         <li>Engage in meaningful discussions aboutrepresentation,storytelling and more</li>
-		  </ul>   
-         <p>Whether you are passionate about Queer;theatre or simplyeager to learn more, ourcommunity welcomes everyone who values diversity on stage.</p>
-      </div>
-	   
-      <!-- Values Section -->
-      <div class="col-lg-8 col-md-12">
-         <h3 class="subheadings-about-page"><strong>Values</strong></h3>
-<ul>
-  <li>Inclusivity</li>
-            <li>Authenticity</li>
-            <li>Learning</li>
-            <li>Accessibility</li>
-       </ul>
-      </div>
-   </div>
-  </div>
-</div>
-  </div>
+	  <!--End of container for Logo-->
+	  
+	  <!--Start of container for Mission-->
+	  <div class="container">
+	    <div class="row">
+	     <div class="d-flex align-items-center">
+		  <div class="col-7 col-md-6 col-xl-4">
+		    <h3 class="mission-about-page"> Mission</h3>
+			  <p>We provide a safe, inclusive space where users can:</p>
+			 <ul>
+			   <li>Read articles</li>
+			   <li>Watch interviews with LGBTQ+ actors and creators</li>
+			   <li>Engage in meaningful discussions about representation,storytelling and more!</li>
+			  </ul>
+			     <p>Whether you are passionate about Queer theatre or simply eager to learn more. Our community welcomes everyone who values diversity on stage.</p>
+			       </div>
+			   </div>
+		    </div>
+	     </div>
+	  <!--End of container for Mission-->
+	  
+	  <!--Start of container for Values-->
+	   <div class="container">
+	    <div class="row">
+	     <div class="d-flex align-items-center">
+		  <div class="col-5 col-md-6 col-xl-8">
+			<h3 class="values-about-page">Values</h3>
+			  <ul>
+			   <li>Authenticity</li>
+			    <li>Learning</li>
+				<li>Accessibility</li>
+			    <li>Inclusivity</li>
+			  </ul>
+			</div>
+		  </div>
+		</div>
+	  </div>
+	  <!--End of container for Values-->
+	  
+	  <!--Start of container for Meet the team-->
+	   <div class="container">
+	    <div class="row">
+	     <div class="d-flex align-items-center">
+		  <div class="col-7 col-md-6 col-xl-4">
+	       <h3 class="meet-the-team-about-page"> Meet the team</h3>
+	     </div> 
+	   </div> 
+	 </div> 
+   </div> 
+	  <!--Start of first container for Meet the team-->
+	  <div class="column-about-page-meet-the-team">
+      <div class="card">
+         <img src="images/pink_carousel.webp" alt="Freya Willems" style="width:100%">
+           <div class="container">
+             <h5 class="text-center">Freya Willems</h5>
+            <p class="text-center">Web developer</p>
+          <p class="text-center">Some text that describes me lorem ipsum ipsum .</p>
+      </div>
+    </div>
+  </div>
+	 
+	  <!--End of first container for Meet the team-->
+	  
+	  <!--Start of second container for Meet the team-->
+	  <div class="column-about-page-meet-the-team">
+        <div class="card">
+         <img src="images/pink_carousel.webp" alt="Dániel Horváth " style="width:100%">
+          <div class="container-about-page-meet-the-team container-meet-the-team-about-page">
+        <h5 class="text-center">Dániel Horváth </h5>
+      <p class="text-center">Web developer</p>
+    <p class="text-center">Some text that describes me lorem ipsum ipsum lorem.</p>
+    </div>
+       </div>
+           </div>
+	   <!--End  of second container for Meet the team-->
+	  
+	   <!--Start of third container for Meet the team-->
+   <div class="column-about-page-meet-the-team">
+      <div class="card">
+         <img src="images/pink_carousel.webp" alt="Elena Beganović" style="width:100%">
+           <div class="container">
+             <h5 class="text-center">Elena Beganović </h5>
+            <p class="text-center">Web developer</p>
+          <p class="text-center">Some text that describes me lorem ipsum ipsum .</p>
+      </div>
+    </div>
+  </div>
+	   <!--End of third container for Meet the team-->
+	  
+	  <!--Start of fourth container for Meet the team-->
+	  <div class="column-about-page-meet-the-team">
+      <div class="card">
+         <img src="images/pink_carousel.webp" alt="Mees de Wilde" style="width:100%">
+           <div class="container">
+             <h5 class="text-center">Mees de Wilde</h5>
+            <p class="text-center">Web developer</p>
+          <p class="text-center">Some text that describes me lorem ipsum ipsum .</p>
+      </div>
+    </div>
+  </div>
+	  
+	  <!--End of fourth container for Meet the team-->
+	  
+	  <!--End of container for Meet the team-->
+	  
       <!--you can delete the huge logo at the bottom if you want. its there to keep the page able to scroll for the footer-->
    
-    <!--end container for about-->
+    
   </main>
   <!--main for your content stops here-->
 
+	
   <!--footer navigation starts here-->
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-12">
+        <div class="col-7">
           <h5>outncenter</h5>
         </div>
       </div>
