attempt to change the padding

--- a/about.html
+++ b/about.html
@@ -288,7 +288,7 @@
 	  <div class="column-about-page-meet-the-team">
       <div class="card">
          <img src="images/pink_carousel.webp" alt="Mees de Wilde" style="width:100%">
-           <div class="container">
+           <div class="container-about-page-meet-the-team container-meet-the-team-about-page">
              <h5 class="text-center">Mees de Wilde</h5>
             <p class="text-center">Web developer</p>
           <p class="text-center">Some text that describes me lorem ipsum ipsum .</p>
