change of footer margin

--- a/about.html
+++ b/about.html
@@ -307,11 +307,11 @@
   <!--main for your content stops here-->
 
 	
-  <!--footer navigation starts here-->
+   <!--footer navigation starts here-->
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-7">
+        <div class="col-12">
           <h5>outncenter</h5>
         </div>
       </div>
@@ -322,7 +322,7 @@
       </div>
     </div>
   </footer>
-
+  <!--footer ends here-->
 
   <!--your script starts here-->
   <script>
