--- a/about.html
+++ b/about.html
@@ -172,7 +172,11 @@
 	     </div>
 	   </div>
     </div> 
-	  <!--End of container for about-->
+	<!--End of container for about-->
+	  
+	<!--Start of container for Logo-->
+    <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo logo-about-page image-logo"> 
+	<!--End of container for Logo-->
 	  
 	 <!--Start of container for vision-->
 	  <div class="container">
@@ -180,24 +184,14 @@
 	     <div class="container-vision-about-page">
 		  <div class="col-7 col-md-6 col-xl-4">
 		    <h3 class="vision-about-page">Vision</h3>
-			    <p>In the world of theatre where LGBTQ+ characters are often misrepresented, we believe in shining spotlight on authentic storytelling. Because everyone at center stage deserves to be out and proud.</p>
-			</div>
-          </div>
-		</div>
-	  </div>
-	  
+			   <p>In the world of theatre where LGBTQ+ characters are often misrepresented, we believe in shining spotlight on authentic storytelling. Because everyone at center stage deserves to be out and proud.</p>
+			  </div>
+            </div>
+		  </div>
+	    </div>
 	  <!--End of container for Vision-->
-	  
-	  
-	  <!--Start of container for Logo-->
-	   <div class="col-5 col-md-6 col-xl-8 d-flex justify-content-center">
-		 <div class="d-flex justify-content-center">
-		   <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo logo-about-page"> 
-        </div>
-      </div>
-	  <!--End of container for Logo-->
-	  
-	  <!--Start of container for Mission-->
+	 
+      <!--Start of container for Mission-->
 	  <div class="container">
 	    <div class="row">
 	     <div class="d-flex align-items-center">
