change of positions

--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="./images/theatre_shows/red_musical.jpg" class="d-block w-100" alt="red musical advertisement">
+        <img src="images/theatre_shows/red_musical.jpg" class="d-block w-100" alt="red musical advertisement">
       </div>
       <div class="carousel-item" data-bs-interval="2000">
         <img src="./images/theatre_shows/musical_picture.jpg" class="d-block w-100" alt="musical advertisement">
