--- a/about.html
+++ b/about.html
@@ -149,20 +149,20 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="images/theatre_shows/red_musical.jpg" class="d-block w-100" alt="red musical advertisement">
+        <img src="images/theatre_shows/red_musical.jpg" class="d-block w-100 images-about-page-carousel-first" alt="red musical advertisement">
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="./images/theatre_shows/musical_picture.jpg" class="d-block w-100" alt="musical advertisement">
+        <img src="./images/theatre_shows/musical_picture.jpg" class="d-block w-100 images-about-page-carousel-second" alt="musical advertisement">
       </div>
       <div class="carousel-item">
-        <img src="./images/theatre_shows/theatre_show.jpg" class="d-block w-100" alt="theatre drag show advertisement">
+        <img src="./images/theatre_shows/theatre_show.jpg" class="d-block w-100 images-about-page-carousel-third" alt="theatre drag show advertisement">
       </div>
     </div>
   </div>
 <!--End of navigations-->
 
 <!--Main for your content and text starts here-->
-  <main class="col-12 col-md-6 col-xl-12 main-about-page">
+  <main >
 
     <!--Container for about-->
      <div class="container">
@@ -182,7 +182,7 @@
 	  <div class="container">
 	    <div class="row d-flex align-items-center">
 	     <div class="container-vision-about-page">
-		  <div class="col-7 col-md-6 col-xl-4">
+		  <div class="col-12 col-md-6 col-xl-4">
 		    <h3 class="vision-about-page">Vision</h3>
 			   <p>In the world of theatre where LGBTQ+ characters are often misrepresented, we believe in shining spotlight on authentic storytelling. Because everyone at center stage deserves to be out and proud.</p>
 			  </div>
@@ -195,7 +195,7 @@
 	  <div class="container">
 	    <div class="row">
 	     <div class="d-flex align-items-center">
-		  <div class="col-7 col-md-6 col-xl-4">
+		  <div class="col-12 col-md-6 col-xl-4">
 		    <h3 class="mission-about-page"> Mission</h3>
 			  <p>We provide a safe, inclusive space where users can:</p>
 			 <ul>
@@ -214,7 +214,7 @@
 	   <div class="container">
 	    <div class="row">
 	     <div class="d-flex align-items-center">
-		  <div class="col-5 col-md-6 col-xl-8">
+		  <div class="col-12 col-md-6 col-xl-4">
 			<h3 class="values-about-page">Values</h3>
 			  <ul>
 			   <li>Authenticity</li>
@@ -232,7 +232,7 @@
 	   <div class="container">
 	    <div class="row">
 	     <div class="d-flex align-items-center">
-		  <div class="col-7 col-md-6 col-xl-4">
+		  <div class="col-12 col-md-6 col-xl-4">
 	       <h3 class="meet-the-team-about-page"> Meet the team</h3>
 	     </div> 
 	   </div> 
