attempt to fix the white space

--- a/about.html
+++ b/about.html
@@ -230,13 +230,7 @@
 	  
 	  <!--Start of container for Meet the team-->
 	   <div class="container">
-	    <div class="row">
-	     <div class="d-flex align-items-center">
-		  <div class="col-12 col-md-6 col-xl-4">
-	       <h3 class="meet-the-team-about-page"> Meet the team</h3>
-	     </div> 
-	   </div> 
-	 </div> 
+	    <div class="row"> </div> 
    </div> 
 	  <!--Start of first container for Meet the team-->
 	  <div class="column-about-page-meet-the-team">
