--- a/about.html
+++ b/about.html
@@ -181,10 +181,10 @@
 		  <div class="col-12 col-md-6 col-xl-4">
 		    <h3 class="vision-about-page">Vision</h3>
 			   <p>In the world of theatre where LGBTQ+ characters are often misrepresented, we believe in shining spotlight on authentic storytelling. Because everyone at center stage deserves to be out and proud.</p>
-			  </div>
-            </div>
-		  </div>
+		   </div>
+          </div>
 	    </div>
+    </div>
 	  <!--End of container for Vision-->
 	 
 	    
@@ -192,7 +192,7 @@
     <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo logo-about-page image-logo"> 
 	<!--End of container for Logo-->
 	  
-      <!--Start of container for Mission-->
+    <!--Start of container for Mission-->
 	  <div class="container">
 	    <div class="row">
 	     <div class="d-flex align-items-center">
@@ -237,7 +237,7 @@
 	  <div class="column-about-page-meet-the-team">
       <div class="card">
          <img src="images/pink_carousel.webp" alt="Freya Willems" style="width:100%">
-           <div class="container">
+           <div class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
              <h5 class="text-center">Freya Willems</h5>
             <p class="text-center">Web developer</p>
           <p class="text-center">Some text that describes me lorem ipsum ipsum .</p>
@@ -251,7 +251,7 @@
 	  <div class="column-about-page-meet-the-team">
         <div class="card">
          <img src="images/pink_carousel.webp" alt="Dániel Horváth " style="width:100%">
-          <div class="container-about-page-meet-the-team container-meet-the-team-about-page">
+          <div class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
         <h5 class="text-center">Dániel Horváth </h5>
       <p class="text-center">Web developer</p>
     <p class="text-center">Some text that describes me lorem ipsum ipsum lorem.</p>
@@ -264,7 +264,7 @@
    <div class="column-about-page-meet-the-team">
       <div class="card">
          <img src="images/pink_carousel.webp" alt="Elena Beganović" style="width:100%">
-           <div class="container">
+           <div class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
              <h5 class="text-center">Elena Beganović </h5>
             <p class="text-center">Web developer</p>
           <p class="text-center">Some text that describes me lorem ipsum ipsum .</p>
@@ -277,7 +277,7 @@
 	  <div class="column-about-page-meet-the-team">
       <div class="card">
          <img src="images/pink_carousel.webp" alt="Mees de Wilde" style="width:100%">
-           <div class="container-about-page-meet-the-team container-meet-the-team-about-page">
+           <div class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
              <h5 class="text-center">Mees de Wilde</h5>
             <p class="text-center">Web developer</p>
           <p class="text-center">Some text that describes me lorem ipsum ipsum .</p>
