aligning the logo

--- a/about.html
+++ b/about.html
@@ -175,21 +175,17 @@
 	<!--End of container for about-->
 	
 	 <!--Start of container for vision-->
-	  <div class="container">
-	    <div class="row d-flex align-items-center">
-	     <div class="container-vision-about-page">
-		  <div class="col-12 col-md-6 col-xl-4">
-		    <h3 class="vision-about-page">Vision</h3>
-			   <p>In the world of theatre where LGBTQ+ characters are often misrepresented, we believe in shining spotlight on authentic storytelling. Because everyone at center stage deserves to be out and proud.</p>
-		   </div>
-          </div>
-	    </div>
+	<div class="container">
+    <div class="row d-flex align-items-center">
+        <div class="col-12 col-md-6 col-xl-4">
+            <h3 class="vision-about-page">Vision</h3>
+            <p>In the world of theatre where LGBTQ+ characters are often misrepresented, we believe in shining spotlight on authentic storytelling. Because everyone at center stage deserves to be out and proud.</p>
+        </div>
+        <div class="col-12 col-md-6 col-xl-4 text-center">
+            <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo logo-about-page image-logo">
+        </div>
     </div>
-	  <!--End of container for Vision-->
-	 
-	    
-	<!--Start of container for Logo-->
-    <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo logo-about-page image-logo"> 
+</div>
 	<!--End of container for Logo-->
 	  
     <!--Start of container for Mission-->
