aligning the image with text

--- a/about.html
+++ b/about.html
@@ -182,7 +182,7 @@
             <p>In the world of theatre where LGBTQ+ characters are often misrepresented, we believe in shining spotlight on authentic storytelling. Because everyone at center stage deserves to be out and proud.</p>
         </div>
         <div class="col-12 col-md-6 col-xl-4 text-center">
-            <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo logo-about-page image-logo">
+            <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo image-logo">
         </div>
     </div>
 </div>
