change of content and sizes

--- a/about.html
+++ b/about.html
@@ -182,7 +182,7 @@
             <p>In the world of theatre where LGBTQ+ characters are often misrepresented, we believe in shining spotlight on authentic storytelling. Because everyone at center stage deserves to be out and proud.</p>
         </div>
         <div class="col-12 col-md-6 col-xl-4 text-center">
-            <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo logo-about-page image-logo">
+            <img src="images/logo/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo logo-about-page image-logo">
         </div>
     </div>
 </div>
@@ -232,7 +232,7 @@
 	  <!--Start of first container for Meet the team-->
 	  <div class="column-about-page-meet-the-team">
       <div class="card">
-         <img src="images/pink_carousel.webp" alt="Freya Willems" style="width:100%">
+         <img src="images/colours_carousel/pink_carousel.webp" alt="Freya Willems" style="width:100%">
            <div class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
              <h5 class="text-center">Freya Willems</h5>
             <p class="text-center">Web developer</p>
@@ -246,7 +246,7 @@
 	  <!--Start of second container for Meet the team-->
 	  <div class="column-about-page-meet-the-team">
         <div class="card">
-         <img src="images/pink_carousel.webp" alt="Dániel Horváth " style="width:100%">
+         <img src="images/colours_carousel/pink_carousel.webp" alt="Dániel Horváth " style="width:100%">
           <div class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
         <h5 class="text-center">Dániel Horváth </h5>
       <p class="text-center">Web developer</p>
@@ -259,7 +259,7 @@
 	   <!--Start of third container for Meet the team-->
    <div class="column-about-page-meet-the-team">
       <div class="card">
-         <img src="images/pink_carousel.webp" alt="Elena Beganović" style="width:100%">
+         <img src="images/colours_carousel/pink_carousel.webp" alt="Elena Beganović" style="width:100%">
            <div class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
              <h5 class="text-center">Elena Beganović </h5>
             <p class="text-center">Web developer</p>
@@ -272,7 +272,7 @@
 	  <!--Start of fourth container for Meet the team-->
 	  <div class="column-about-page-meet-the-team">
       <div class="card">
-         <img src="images/pink_carousel.webp" alt="Mees de Wilde" style="width:100%">
+         <img src="images/colours_carousel/pink_carousel.webp" alt="Mees de Wilde" style="width:100%">
            <div class="container-about-page-meet-the-team container-meet-the-team-about-page text-within-card-about-page">
              <h5 class="text-center">Mees de Wilde</h5>
             <p class="text-center">Web developer</p>
@@ -302,7 +302,7 @@
       </div>
       <div class="row">
         <div class="col-3">
-          <img src="images/onc_nl_bs3.svg" alt="outncenter" class="large-logo justify-content-start">
+          <img src="images/logo/onc_nl_bs3.svg" alt="outncenter" class="large-logo justify-content-start">
         </div>
       </div>
     </div>
