--- a/about.html
+++ b/about.html
@@ -174,15 +174,15 @@
     </div> 
 	<!--End of container for about-->
 	
-	 <!--Start of container for vision-->
+	<!--Start of container for vision-->
 	<div class="container">
-    <div class="row d-flex align-items-center">
+      <div class="row d-flex align-items-center">
         <div class="col-12 col-md-6 col-xl-4">
             <h3 class="vision-about-page">Vision</h3>
             <p>In the world of theatre where LGBTQ+ characters are often misrepresented, we believe in shining spotlight on authentic storytelling. Because everyone at center stage deserves to be out and proud.</p>
-        </div>
+          </div>
         <div class="col-12 col-md-6 col-xl-4 text-center">
-            <img src="images/logo/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo logo-about-page image-logo">
+          <img src="images/logo/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo logo-about-page image-logo">
         </div>
     </div>
 </div>
@@ -227,8 +227,13 @@
 	  
 	  <!--Start of container for Meet the team-->
 	   <div class="container">
-	    <div class="row"> </div> 
+	    <div class="row"> 
+		<div class="col-12 col-md-6 col-xl-4">
+			<h3 class="meet-the-team-about-page">Meet the team</h3>
    </div> 
+  </div> 
+</div> 	
+
 	  <!--Start of first container for Meet the team-->
 	  <div class="column-about-page-meet-the-team">
       <div class="card">
