fixing the image links

--- a/about.html
+++ b/about.html
@@ -149,13 +149,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="images/theatre_shows/red_musical.jpg" class="d-block w-100 images-about-page-carousel-first" alt="red musical advertisement">
+        <img src="images/theatre_shows/theatre_show.jpg" class="d-block w-100 images-about-page-carousel-first" alt="red musical advertisement">
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="./images/theatre_shows/musical_picture.jpg" class="d-block w-100 images-about-page-carousel-second" alt="musical advertisement">
+        <img src="images/theatre_shows/red_musical.jpg" class="d-block w-100 images-about-page-carousel-second" alt="musical advertisement">
       </div>
       <div class="carousel-item">
-        <img src="./images/theatre_shows/theatre_show.jpg" class="d-block w-100 images-about-page-carousel-third" alt="theatre drag show advertisement">
+        <img src="images/theatre_shows/musical_picture.jpg" class="d-block w-100 images-about-page-carousel-third" alt="theatre drag show advertisement">
       </div>
     </div>
   </div>
