--- a/profile.html
+++ b/profile.html
@@ -165,18 +165,35 @@
   <main>
     <!--container for about-->
     <div class="container">
-      <div class="row">
-        <div class="col-12">
-          <h2>create your profile</h2>
-          </p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-12">
-          <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo justify-content-end">
-        </div>
-      </div>
+    <div class="profile-container">
+        <h3 class="text-center">Create Your Profile</h3>
+        <form action="profile.html" method="POST">
+            <div class="mb-3">
+                <label for="name" class="form-label">Full Name</label>
+                <input type="text" class="form-control" id="name" placeholder="Enter your full name" required>
+            </div>
+            <div class="mb-3">
+                <label for="email" class="form-label">Email</label>
+                <input type="email" class="form-control" id="email" placeholder="Enter your email" required>
+            </div>
+            <div class="mb-3">
+                <label for="username" class="form-label">Username</label>
+                <input type="text" class="form-control" id="username" placeholder="Choose a username" required>
+            </div>
+            <div class="mb-3">
+                <label for="password" class="form-label">Password</label>
+                <input type="password" class="form-control" id="password" placeholder="Create a password" required>
+            </div>
+            <div class="mb-3">
+                <label for="profile-pic" class="form-label">Profile Picture</label>
+                <input type="file" class="form-control" id="profile-pic">
+            </div>
+            <button type="submit" class="btn btn-primary w-100">Create Profile</button>
+        </form>
+        <p class="text-center mt-3"><a href="login.html">Already have an account? Log in</a></p>
     </div>
+</div>
+
     <!--end container for about-->
   </main>
   <!--main for your content stops here-->
