--- a/corporate.html
+++ b/corporate.html
@@ -149,13 +149,13 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="10000">
-        <img src="images/colours_carousel/pink_carousel.webp" class="d-block w-100" alt="pink advertisement">
+        <img src="./images/pink_carousel.webp" class="d-block w-100" alt="pink advertisement">
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="images/colours_carousel/orange_carousel.png" class="d-block w-100" alt="teal advertisement">
+        <img src="./images/teal_carousel.png" class="d-block w-100" alt="teal advertisement">
       </div>
       <div class="carousel-item">
-        <img src="images/colours_carousel/teal_carousel.png" class="d-block w-100" alt="orange advertisement">
+        <img src="./images/orange_carousel.png" class="d-block w-100" alt="orange advertisement">
       </div>
     </div>
   </div>
@@ -177,7 +177,7 @@
             <!--you can delete the huge logo at the bottom if you want. its there to keep the page able to scroll for the footer-->
       <div class="row">
         <div class="col-12">
-          <img src="images/logo/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo justify-content-end">
+          <img src="images/onc_nl_bs3.svg" alt="outncenter" class="img-fluid large-logo justify-content-end">
         </div>
       </div>
     </div>
@@ -195,7 +195,7 @@
       </div>
       <div class="row">
         <div class="col-3">
-          <img src="images/logo/onc_nl_bs3.svg" alt="outncenter" class="large-logo justify-content-start">
+          <img src="images/onc_nl_bs3.svg" alt="outncenter" class="large-logo justify-content-start">
         </div>
       </div>
     </div>
