--- a/blog.html
+++ b/blog.html
@@ -249,7 +249,7 @@
 		<div class="col-3 d-flex justify-content-left">
 		  	<ul class="footer2 list-unstyled">
 				<li>Mon-Sun 9:00-17:00</li>
-				<li>+31 6 20 87 45 18</li>
+				<li>+31 6 20 87 45 1</li>
 				<li>
 					<a href="mailto:outncenter@gmail.com" style="text-decoration: none;  color: white;">outncenter@gmail.com</a>
 				</li>
@@ -258,7 +258,7 @@
 		<div class="col-5 d-flex justify-content-left">
 		  	<ul class="footer2 list-unstyled">
 				<li>
-					<a href="index.html" style="text-decoration: none;  color: white;">Main Page</a>
+					<a href="index.html" style="text-decoration: none;  color: white;">Home Page</a>
 				</li>
 				<li>
 					<a href="about.html" style="text-decoration: none;  color: white;">About</a>
