--- a/profile.html
+++ b/profile.html
@@ -190,7 +190,7 @@
             </div>
             <button type="submit" class="btn btn-primary w-100">Create Profile</button>
         </form>
-        <p class="text-center mt-3"><a href="login.html">Already have an account? Log in</a></p>
+        <p class="text-center mt-3">Already have an account? Log in</p>
     </div>
 </div>
 
