--- a/blog.html
+++ b/blog.html
@@ -232,10 +232,10 @@
   <footer>
     <div class="container">
       <div class="row">
-        <div class="col-4">
+        <div class="col-12 col-md-4">
           	<h5 class="footer">outncenter</h5>
         </div>
-		<div class="col-3 d-flex align-items-center justify-content-left">
+		<div class="col-5 col-md-3 d-flex align-items-center justify-content-left">
             <h5 class="footer2">Contact us</h5>
         </div>
 		<div class="col-5 d-flex align-items-center justify-content-left">
@@ -243,8 +243,8 @@
         </div>
       </div>
 	  <div class="row justify-content-center">
-		<div class="col-4">
-			
+		<div class="col-1 col-md-4">
+			<img src="images/onc_notext2.svg" style="max-width: 20%;" class="img-fluid" alt="Logo">
 		</div>
 		<div class="col-3 d-flex justify-content-left">
 		  	<ul class="footer2 list-unstyled">
