--- a/about.html
+++ b/about.html
@@ -227,8 +227,10 @@
 	  
 	  <!--Start of container for Meet the team-->
 	   <div class="container">
-	    <div class="row"> </div> 
-   </div> 
+	     <div class="row"> </div> 
+		    <h3 class="meet-the-team-about-page ">Meet the team</h3>
+        </div> 
+        
 	  <!--Start of first container for Meet the team-->
 	  <div class="column-about-page-meet-the-team">
       <div class="card">
